--- a/app/assets/stylesheets/messages.css
+++ b/app/assets/stylesheets/messages.css
@@ -35,7 +35,6 @@
   background-color: #2f3e51;
   height: calc(100vh - 100px);
   padding: 0 20px;
-  overflow: scroll;
 }
 
 .room {
@@ -78,7 +77,7 @@
 
 .messages {
   background-color: #fafafa;
-  height: calc(100vh - 190px);
+  height: calc(100vh - 100px - 90px);
   padding: 46px 40px 0;
   overflow: scroll;
 }
